<resources>
    <string name="app_name">DrawLayoutMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_recommend">推荐应用</string>
    <string name="string_find">发现</string>
    <string name="string_safe">安全中心</string>
    <string name="string_about">关于</string>
    <string name="string_setting">设置</string>
    <string name="string_small">小程序</string>
    <string name="string_click_login">点击登录</string>
</resources>
