<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/drawerlayout_find"
            android:title="@string/string_find" />

    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/drawer_recommend"
            android:title="@string/string_recommend" />

    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/drawer_safe"
            android:title="@string/string_safe" />

    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/drawer_small"
            android:title="@string/string_small" />

    </group>

    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/drawer_setting"
            android:title="@string/string_small" />
    </group>
    <group
        android:id="@+id/grp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/drawer_setting"
            android:title="@string/string_about" />

    </group>

</menu>
