<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@mipmap/drawer_top_background1"
                android:orientation="vertical"
                android:scaleType="centerCrop" />


            <com.page.android.utils.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/back"
                android:layout_marginLeft="@dimen/margin_28dp"
                android:layout_marginTop="-46dp"
                android:src="@mipmap/head_default"
                app:civ_border_color="@color/color_7fdfff"
                app:civ_border_width="@dimen/margin_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@+id/back"
                android:layout_marginTop="-46dp"
                android:layout_toRightOf="@+id/iv_head"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/login_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="李耀军"
                        android:textColor="#444444"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/iv_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:src="@mipmap/out1" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/string_click_login"
                android:textColor="@color/color_22bdf5"
                android:textSize="@dimen/text_40px"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/login_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="64dp"
                android:paddingTop="15dp"
                android:text="上次登录时间 2019-03-08 20:47:06"
                android:textColor="#686c6d"
                android:textSize="11sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawerlayout_find" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="发现"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawer_recommend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="@string/string_recommend"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawer_safe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="@string/string_safe"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawer_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="@string/string_small"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:id="@+id/ll_go_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawer_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="@string/string_setting"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/drawer_about" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="@string/string_about"
                    android:textColor="#555555"
                    android:textSize="40px" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dddddd" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:text="版本4.1.4.004(258)"
        android:textColor="@color/color_666666"
        android:visibility="gone" />
</RelativeLayout>
